# pan

./: .clang-format  .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  COPYING-DOCS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  NEWS.rewrite  README  README.dev.org  README.mingw  README.mingw64_msys2  README.org  README.windows  README.windows.in  TODO  acinclude.m4  aclocal.m4  autogen.sh  config-cmake.h.in  config.h.in  configure.ac  configure.in  mknews  org.gnome.pan.desktop.in  org.gnome.pan.metainfo.xml.in  org.gnome.pan.service.in  pan.1  pan.appdata.xml.in  pan.cbp  pan.desktop.in  pan.doap  pan.iss.in  pan.spec.in  (+2 more)
help/: CMakeLists.txt  Changelog  Makefile.am  pan.omf.in
help/C/: index.docbook  pan.xml
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/sv/: sv.po
pan/data/: CMakeLists.txt  Makefile.am  Makefile.in  article-cache.cc  article-cache.h  article-test.cc  article.cc  article.h  cert-store.cc  cert-store.h  data.cc  data.h  defgroup.h  encode-cache.cc  encode-cache.h  file-queue.cc  file-queue.h  filter-info.h  in-memory-article.cc  in-memory-article.h  in-memory-parts.cc  in-memory-parts.h  in-memory-xref.cc  in-memory-xref.h  outbound-article.cc  outbound-article.h  outbound-parts.cc  outbound-parts.h  pan-db.cc  pan-db.h  parts.cc  parts.h  scorefile.cc  scorefile.h  server-info.h  sqlcond.h  xref-test.cc  xref.cc  xref.h
pan/data-impl/: CMakeLists.txt  Makefile.am  Makefile.in  add-server.cc  article-filter.cc  article-filter.h  article-rules.cc  article-rules.h  article-test.cc  article-tree-test.cc  article-tree-test.h  cert-store.cc  cert-store.h  data-impl.cc  data-impl.h  data-io.cc  data-io.h  defgroup.h  download-meter.cc  download-meter.h  ghost-article-test.cc  groups.cc  header-filter-test.cc  header-filter.cc  header-filter.h  header-rules-test.cc  header-rules.cc  header-rules.h  header-score-test.cc  headers-test.cc  headers.cc  hotkeys.cc  memchunk.h  my-tree-test.cc  my-tree.cc  profiles.cc  profiles.h  rules-filter.cc  rules-filter.h  server.cc  (+2 more)
pan/data-impl/sql/: 01-server.sql  02-group.sql  03-article.sql  04-posting-profile.sql  05-article-view.sql  99-cleanup.sql  README.org  temp_article.sql
pan/data-migration/: CMakeLists.txt  article-filter.h  data-impl.cc  data-impl.h  data-io.h  data-migration.cc  data-migration.h  groups.cc  headers-test.cc  headers.cc  my-tree.cc  rules-filter.cc  server.cc  speed-test-load-group.cc  task-archive.cc  xover.cc
pan/data-migration/sql/: test.db
pan/data/decode-test-cache/: Makefile.am  Makefile.in  apostrophe.msg  noisy_1_2.msg  noisy_2_2.msg  penguin_1_2.msg  penguin_2_2.msg  two_mime_attachments.msg  two_uu_attachments.msg  xuuencode.msg  (+3 more)
pan/general/: CMakeLists.txt  Makefile.am  Makefile.in  article_number.cc  article_number.h  compression.cc  compression.h  debug.cc  debug.h  defgroup.h  e-util.cc  e-util.h  editor-spawner.cc  editor-spawner.h  file-util.cc  file-util.h  gassert.h  group-prefs.h  line-reader.cc  line-reader.h  locking.h  log.cc  log.h  log4cxx.cc  log4cxx.h  macros.h  map-vector.h  messages.h  null.h  pan-colors.h  prefs.cc  prefs.h  progress-test.cc  progress.cc  progress.h  quark.cc  quark.h  singleton-template.h  sorted-vector.h  string-view-test.cc  (+12 more)
pan/gui/: CMakeLists.txt  Makefile.am  Makefile.in  action-manager.h  actions-extern.h  actions.cc  actions.h  body-pane.cc  body-pane.h  charset-picker.cc  charset-picker.h  defgroup.h  dl-headers-ui.cc  dl-headers-ui.h  dl-prefs.cc  dl-prefs.h  e-action-combo-box.c  e-action-combo-box.h  e-charset-combo-box.c  e-charset-combo-box.h  e-charset-dialog.c  e-charset-dialog.h  e-charset-picker.c  e-charset-picker.h  e-charset.c  e-charset.h  e-cte-dialog.c  e-cte-dialog.h  editor-spawner.cc  editor-spawner.h  gpg.cc  gpg.h  group-pane.cc  group-pane.h  group-prefs-dialog.cc  group-prefs-dialog.h  group-prefs.cc  group-prefs.h  gtk-compat.h  gtk_compat.h  (+68 more)
pan/icons/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  icon_pan_about_logo.xcf  icon_pan_logo.xcf  pan-pixbufs-internal.h
pan/tasks/: CMakeLists.txt  Makefile.am  Makefile.in  adaptable-set-test.cc  adaptable-set.cc  adaptable-set.h  cert-store.cc  cert-store.h  decoder.cc  decoder.h  defgroup.h  encoder.cc  encoder.h  health.h  nntp-pool.cc  nntp-pool.h  nntp.cc  nntp.h  nzb-test.cc  nzb.cc  nzb.h  queue.cc  queue.h  socket-impl-gio.cc  socket-impl-gio.h  socket-impl-main.cc  socket-impl-main.h  socket-impl-openssl.cc  socket-impl-openssl.h  socket-impl-scripted.cc  socket-impl-scripted.h  socket.cc  socket.h  task-article.cc  task-article.h  task-groups.cc  task-groups.h  task-multipost.cc  task-multipost.h  task-post.cc  (+16 more)
pan/usenet-utils/: CMakeLists.txt  Makefile.am  Makefile.in  blowfish.cc  blowfish.h  blowfish_cyphers.h  defgroup.h  filter-info.cc  filter-info.h  gnksa-test.cc  gnksa.cc  gnksa.h  gpg.cc  gpg.h  message-check-test.cc  message-check.cc  message-check.h  mime-utils.cc  mime-utils.h  numbers-test.cc  numbers.cc  numbers.h  rules-info.cc  rules-info.h  scorefile-test.cc  scorefile.cc  scorefile.h  ssl-utils.cc  ssl-utils.h  text-massager-test.cc  text-massager.cc  text-massager.h  url-find-test.cc  url-find.cc  url-find.h  utf8-utils.cc  utf8-utils.h
po/: CMakeLists.txt  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  TRANSLATORS.txt  am.po  ar.po  az.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hr.po  hu.po  id.po  ie.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  ms.po  (+21 more)
trunk/: AUTHORS  Makefile.am  README  README.windows.in  acinclude.m4  configure.in  pan.desktop.in
trunk/po/: ChangeLog  POTFILES.in  am.po  bg.po  ca.po  da.po  de.po  en_CA.po  en_GB.po  fr.po  ro.po  ru.po  sk.po  sl.po  sr@Latn.po  sv.po  uk.po
trunk/uulib/: crc32.c  fptools.c  fptools.h  uuencode.c  uuscan.c
uulib/: CMakeLists.txt  Makefile.am  Makefile.in  crc32.c  crc32.h  fptools.c  uucheck.c  uudeview.h  uuencode.c  uuint.h  uulib.c  uunconc.c  uuscan.c  uustring.c  uustring.h  uuutil.c
(+93 files in other folders)
